plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dep.management)
}

group = 'dev.agasen'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':src:backend:platform:common')

    implementation libs.spring.starter.web
    implementation libs.spring.starter.validation
    implementation libs.spring.data.commons

    compileOnly libs.lombok
    annotationProcessor libs.lombok

    testImplementation libs.spring.starter.test
    testRuntimeOnly libs.junit.launcher
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
    options.release = 26
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

jar {
    enabled = true
    archiveClassifier = ''
}

bootJar {
    enabled = false
}
